keep moving forward

--- a/input.css
+++ b/input.css
@@ -20,3 +20,11 @@ h5 {
 .section-content {
     @apply max-w-3xl mx-auto text-xl leading-9 text-center text-grayishBlue;
 }
+
+.button-container {
+    @apply flex justify-center text-center mx-auto flex-col w-full space-y-6 text-xl text-white md:flex-row md:space-y-0 md:space-x-4
+}
+
+.ficon:hover {
+    filter: invert(53%) sepia(68%) saturate(434%) hue-rotate(121deg) brightness(101%) contrast(94%);
+}
